--- a/santiago.html
+++ b/santiago.html
@@ -13,5 +13,6 @@
 
     <h1>Je pense que le français est une belle langue et je voulais remplir le site</h1>
     <p>la vie est bien plus que ce que vous pouvez imaginer</p>
+    <h2>Só quem se arRiIiIscaaaAaaa merece viver o ExtRaORdináRIo!</h2>
 </body>
 </html>
